--- a/buildtools/qmake/filepropertybase.ui
+++ b/buildtools/qmake/filepropertybase.ui
@@ -59,13 +59,19 @@
             <property name="text">
                 <string>&amp;OK</string>
             </property>
+            <property name="default">
+                <bool>true</bool>
+            </property>
         </widget>
         <widget class="QLabel" row="0" column="0">
             <property name="name">
                 <cstring>TextLabel1</cstring>
             </property>
             <property name="text">
-                <string>Exclude in:</string>
+                <string>&amp;Exclude in:</string>
+            </property>
+            <property name="buddy" stdset="0">
+                <cstring>ScopeTree</cstring>
             </property>
         </widget>
         <widget class="QListView" row="1" column="0" rowspan="1" colspan="3">
@@ -105,12 +111,12 @@
     <tabstop>buttonOk</tabstop>
     <tabstop>buttonCancel</tabstop>
 </tabstops>
-<slots>
-    <slot>updateFileProperties()</slot>
-</slots>
 <includes>
     <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
+<slots>
+    <slot>updateFileProperties()</slot>
+</slots>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
