--- a/vcs/cvs/cvsform.ui
+++ b/vcs/cvs/cvsform.ui
@@ -17,8 +17,7 @@
         <string>Form3</string>
     </property>
     <property name="whatsThis" stdset="0">
-        <string>This form allows you to create a CVS repository
-for your new project</string>
+        <string>This form allows you to create a CVS repository for your new project.</string>
     </property>
     <grid>
         <property name="name">
@@ -60,7 +59,7 @@ for your new project</string>
                 <string>Enter the name of the repository</string>
             </property>
             <property name="whatsThis" stdset="0">
-                <string>CVS Repository name goes here
+                <string>CVS Repository name goes here.
 Most of the thime you'll just reuse the project name</string>
             </property>
         </widget>
@@ -144,8 +143,8 @@ Most of the thime you'll just reuse the project name</string>
                 <string>Enter your CVS Root location</string>
             </property>
             <property name="whatsThis" stdset="0">
-                <string>CVS Root location goes here
-e.g. &lt;tt&gt;/home/cvsroot&lt;/tt&gt; or &lt;tt&gt;:pserver:me@localhost:/home/cvs&lt;/tt&gt;</string>
+                <string>CVS Root location goes here, for example:&lt;ul&gt;
+&lt;li&gt;/home/cvsroot or&lt;/li&gt;&lt;li&gt;:pserver:me@localhost:/home/cvs&lt;/li&gt;&lt;/ul&gt;</string>
             </property>
         </widget>
         <widget class="QCheckBox" row="1" column="1">
