--- a/parts/appwizard/appwizarddlgbase.ui
+++ b/parts/appwizard/appwizarddlgbase.ui
@@ -170,7 +170,7 @@
                             <cstring>author_edit</cstring>
                         </property>
                     </widget>
-                    <widget class="QLineEdit" row="1" column="1" rowspan="1" colspan="3">
+                    <widget class="KURLRequester" row="1" column="1" rowspan="1" colspan="3">
                         <property name="name">
                             <cstring>dest_edit</cstring>
                         </property>
@@ -200,34 +200,6 @@
                         </property>
                         <property name="buddy" stdset="0">
                             <cstring>appname_edit</cstring>
-                        </property>
-                    </widget>
-                    <widget class="QToolButton" row="1" column="4">
-                        <property name="name">
-                            <cstring>dest_button</cstring>
-                        </property>
-                        <property name="sizePolicy">
-                            <sizepolicy>
-                                <hsizetype>0</hsizetype>
-                                <vsizetype>3</vsizetype>
-                                <horstretch>0</horstretch>
-                                <verstretch>0</verstretch>
-                            </sizepolicy>
-                        </property>
-                        <property name="minimumSize">
-                            <size>
-                                <width>30</width>
-                                <height>0</height>
-                            </size>
-                        </property>
-                        <property name="maximumSize">
-                            <size>
-                                <width>30</width>
-                                <height>32767</height>
-                            </size>
-                        </property>
-                        <property name="text">
-                            <string>....</string>
                         </property>
                     </widget>
                     <widget class="QLineEdit" row="3" column="1">
@@ -353,10 +325,10 @@
         <slot>textChanged()</slot>
     </connection>
     <connection>
-        <sender>dest_button</sender>
-        <signal>clicked()</signal>
+        <sender>dest_edit</sender>
+        <signal>urlSelected(const QString&amp;)</signal>
         <receiver>AppWizardDlgBase</receiver>
-        <slot>destButtonClicked()</slot>
+        <slot>destButtonClicked(const QString&amp;)</slot>
     </connection>
     <connection>
         <sender>license_combo</sender>
@@ -394,7 +366,7 @@
 </tabstops>
 <slots>
     <slot access="protected">licenseChanged()</slot>
-    <slot access="protected">destButtonClicked()</slot>
+    <slot access="protected">destButtonClicked(const QString&amp;)</slot>
     <slot access="protected">projectLocationChanged()</slot>
     <slot access="protected">projectNameChanged()</slot>
     <slot access="protected">templatesTreeViewClicked( QListViewItem * )</slot>
@@ -402,6 +374,7 @@
 </slots>
 <includes>
     <include location="global" impldecl="in implementation">kdialog.h</include>
+    <include location="global" impldecl="in declaration">kurlrequester.h</include>
 </includes>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
